--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "react": "19.1.0",
