--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "remixicon-react": "^1.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
